# Planktos

./: .gitignore  .readthedocs.yaml  CLAUDE.md  Planktos.bib  Planktos.py  README.md  TODO.md  TODO.txt  agents.py  changelog.txt  conftest.py  data_IO.py  ex_ib2d_mvbnd_sticky.py  example_2d.py  example_3d.py  example_IBAMR.py  framework.py  init_pos.py  misc.py  motion.py  mv_swarm.py  pytest.ini  read_IBAMR3d.py  read_IBAMR3d_py27.py  read_vtk_py27.py  setup.cfg  setup.py  swarm.py  test.py  test_3d.py  test_3d_timedep.py  test_timedep.py
brine_shrimp/: .gitignore  Brinkman_flow_3d.py  IBAMR_flow.py  IBFE_bias_shrimp.py  IBFE_shrimp.py  batch_proc_10x20_2cm_D.py  batch_proc_comsol.py  comsol_shrimp.py  null_sim.py  plot_batch_stats.py  shrimp_funcs.py
docs/: .gitignore  conf.py  index.rst  quickstart.rst  requirements.txt
eq_of_motion/: eq_of_motion.tex
examples/: .gitignore  basic_ex_2d.py  basic_ex_3d.py  ex_3d_flat.py  ex_IBAMR_ibmesh.py  ex_agent_behavior.py  ex_ib2d_ibmesh.py  ex_ib2d_mvbnd_sticky.py  ex_ib2d_sticky.py  ex_ind_var.py  ex_ode_gen.py  ex_poisson_search.py  ex_produce_ftle_2d.py  ex_sticky_seafan_3d.py  ex_vicsek_model.py  ex_vicsek_model_2d.py  ex_vicsek_model_3D.py  ex_vicsek_model_3D_new.py  ex_vicsek_model_3d.py  ex_vicsek_model_new.py  example_2d.py  example_2d_plankton_agent.py  example_3d.py  example_3d_flat.py  example_IBAMR.py  example_IBAMR_ibmesh.py  example_ib2d_ibmesh.py  example_ind_var.py  old_example_3d.py  plankton_agent.py  plt_cyl.py
plankton/: ex_2d.py  plankton.py
planktos/: TODO for dynamic loading.txt  __init__.py  _dataio.py  _environment.py  _geom.py  _ibc.py  _swarm.py  dataio.py  environment.py  fluid.py  geo.py  geom.py  motion.py  swarm.py
tests/: _ib_harness.py  _ib_scenarios.py  bench_ib_parallel.py  mvib2d.py  proj_and_sld_mv_test.ipynb  reset_nb.py  rubberband.py  test_agent_models.py  test_agents.py  test_analysis.py  (+24 more)
(+66 files in other folders)
