[metadata]
name = planktos
version = attr: planktos.__version__
description = An agent-based modeling framework for small organism movement and dispersal in a fluid environment with immersed structures
long_description = file: README.md
license = GNU v3 license
classifiers = 
    Programming Language :: Python :: 3

[options]
packages = planktos
install_requires =
    numpy
    scipy
    matplotlib >= 3.0
    pandas
python_requires = >=3.7

[options.extras_require]
VTK = vtk; pyvista
STL = numpy-stl>=2.16.3
netCDF = netcdf4>=1.5.7
test = pytest