[metadata]
name = planktos
version = attr: planktos.__version__
author = W. Christopher Strickland
description = An agent-based modeling framework for small organism movement and dispersal in a fluid environment with immersed structures
long_description = file: README.md
license = GNU v3 license
classifiers = 
    Programming Language :: Python :: 3

# scipy 1.10.0 has a broken interpn (cython bug)
[options]
packages = planktos
install_requires =
    numpy >= 1.19
    scipy >= 1.10.1 
    matplotlib >= 3.0
    pandas
    pyvista >= 0.44
python_requires = >=3.8

[options.extras_require]
STL = numpy-stl>=2.16.3
netCDF = netcdf4>=1.5.7
test = pytest